All field validation is correct submit button visibel is fixed

--- a/src/Components/CandidateForm/CandidateForm.css
+++ b/src/Components/CandidateForm/CandidateForm.css
@@ -150,3 +150,7 @@ body{
 .phoneInput{
     margin-top: -10px;
 }
+
+.text-danger{
+    font-size: 14px;
+}
